--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
           </div>
 
           <div class="flex justify-center">
-            <div class="flex">
+            <div class="flex flex-col">
               <h1 class="text-gray-600 font-bold md:text-2xl text-xl">
                 Clash of Timpa Generator
               </h1>
+              <a class="text-center" href="https://instagram.com/zulnurdiana"
+                >created by
+                <span class="text-center underline">zulnurdiana</span>
+              </a>
             </div>
           </div>
 
